	PR target/21297 	* config/i386/i386.c (legitimize_address): When canonicalizing 	ASHIFT into MULT, multiply by 1 << shift_count instead of 	1 << log2 (shift_count).

* gcc.c-torture/execute/20050502-2.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@99156 138bc75d-0d04-0410-961f-82ee72b054a4